--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,67 +7,79 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/number1"
         android:layout_width="92dp"
         android:layout_height="72dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="24dp"
         android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/number3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="93dp"
-        android:layout_height="69dp"
+        android:id="@+id/number3"
+        android:layout_width="92dp"
+        android:layout_height="72dp"
         android:layout_marginEnd="24dp"
         android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/number5"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintStart_toEndOf="@+id/number1"
+        app:layout_constraintTop_toTopOf="@+id/number1" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="88dp"
-        android:layout_height="67dp"
+        android:id="@+id/number5"
+        android:layout_width="92dp"
+        android:layout_height="72dp"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintStart_toEndOf="@+id/number3"
+        app:layout_constraintTop_toTopOf="@+id/number1" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="94dp"
-        android:layout_height="67dp"
+        android:id="@+id/number2"
+        android:layout_width="92dp"
+        android:layout_height="72dp"
         android:layout_marginTop="24dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/number1"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="@+id/number1"
+        app:layout_constraintTop_toBottomOf="@+id/number1" />
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="93dp"
-        android:layout_height="67dp"
+        android:id="@+id/number4"
+        android:layout_width="92dp"
+        android:layout_height="72dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/number3"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        app:layout_constraintStart_toStartOf="@+id/number3"
+        app:layout_constraintTop_toTopOf="@+id/number2" />
 
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="87dp"
-        android:layout_height="68dp"
+        android:id="@+id/number6"
+        android:layout_width="92dp"
+        android:layout_height="72dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/number5"
+        app:layout_constraintStart_toStartOf="@+id/number5"
+        app:layout_constraintTop_toTopOf="@+id/number2" />
 
     <EditText
         android:id="@+id/editTextNumberDecimal"
@@ -76,41 +88,30 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="@+id/number2"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintStart_toStartOf="@+id/number2"
+        app:layout_constraintTop_toBottomOf="@+id/number2" />
 
     <EditText
         android:id="@+id/editTextNumberDecimal2"
-        android:layout_width="96dp"
-        android:layout_height="69dp"
+        android:layout_width="100dp"
+        android:layout_height="67dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="@+id/number4"
+        app:layout_constraintStart_toStartOf="@+id/number4"
         app:layout_constraintTop_toTopOf="@+id/editTextNumberDecimal" />
 
     <EditText
         android:id="@+id/editTextNumberDecimal3"
-        android:layout_width="98dp"
+        android:layout_width="100dp"
         android:layout_height="67dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="@+id/textView6"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="@+id/number6"
+        app:layout_constraintStart_toStartOf="@+id/number6"
         app:layout_constraintTop_toTopOf="@+id/editTextNumberDecimal" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="96dp"
-        android:layout_height="85dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
-        app:srcCompat="@drawable/img" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -124,69 +125,51 @@
         app:srcCompat="@drawable/img_1" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="92dp"
-        android:layout_height="85dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal2"
-        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal2"
-        app:srcCompat="@drawable/img" />
-
-    <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="91dp"
+        android:layout_width="93dp"
         android:layout_height="84dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal2"
         app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal2"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
         app:srcCompat="@drawable/img_1" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="94dp"
-        android:layout_height="84dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal3"
-        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal3"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:srcCompat="@drawable/img" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="93dp"
-        android:layout_height="82dp"
+        android:layout_height="84dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal3"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal3"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
         app:srcCompat="@drawable/img_1" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="90dp"
-        android:layout_height="88dp"
+        android:layout_width="94dp"
+        android:layout_height="83dp"
         android:layout_marginTop="24dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:text="check"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="89dp"
-        android:layout_height="86dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        android:layout_width="94dp"
+        android:layout_height="83dp"
+        android:text="check"
+        app:layout_constraintEnd_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toStartOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="@+id/button" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="88dp"
-        android:layout_height="84dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
+        android:layout_width="94dp"
+        android:layout_height="83dp"
+        android:text="check"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
         app:layout_constraintTop_toTopOf="@+id/button" />
 
     <Button
@@ -194,7 +177,8 @@
         android:layout_width="223dp"
         android:layout_height="90dp"
         android:layout_marginTop="24dp"
-        android:text="Button"
+        android:text="restart"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
