--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,95 +82,98 @@
         app:layout_constraintTop_toTopOf="@+id/number2" />
 
     <EditText
-        android:id="@+id/editTextNumberDecimal"
+        android:id="@+id/editText1"
         android:layout_width="100dp"
         android:layout_height="67dp"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="numberDecimal"
+        android:hint="enter sum"
         app:layout_constraintEnd_toEndOf="@+id/number2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/number2"
         app:layout_constraintTop_toBottomOf="@+id/number2" />
 
     <EditText
-        android:id="@+id/editTextNumberDecimal2"
+        android:id="@+id/editText2"
         android:layout_width="100dp"
         android:layout_height="67dp"
         android:ems="10"
         android:inputType="numberDecimal"
+        android:hint="enter sum"
         app:layout_constraintEnd_toEndOf="@+id/number4"
         app:layout_constraintStart_toStartOf="@+id/number4"
-        app:layout_constraintTop_toTopOf="@+id/editTextNumberDecimal" />
+        app:layout_constraintTop_toTopOf="@+id/editText1" />
 
     <EditText
-        android:id="@+id/editTextNumberDecimal3"
+        android:id="@+id/editText3"
         android:layout_width="100dp"
         android:layout_height="67dp"
         android:ems="10"
         android:inputType="numberDecimal"
+        android:hint="enter sum"
         app:layout_constraintEnd_toEndOf="@+id/number6"
         app:layout_constraintStart_toStartOf="@+id/number6"
-        app:layout_constraintTop_toTopOf="@+id/editTextNumberDecimal" />
+        app:layout_constraintTop_toTopOf="@+id/editText1" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="93dp"
+        android:layout_height="84dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="@+id/editText1"
+        app:layout_constraintHorizontal_bias="0.857"
+        app:layout_constraintStart_toStartOf="@+id/editText1"
+        app:layout_constraintTop_toBottomOf="@+id/editText1"
+        app:srcCompat="@drawable/img_1" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="93dp"
         android:layout_height="84dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal"
-        app:layout_constraintHorizontal_bias="0.857"
-        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
+        app:layout_constraintEnd_toEndOf="@+id/editText2"
+        app:layout_constraintStart_toStartOf="@+id/editText2"
+        app:layout_constraintTop_toTopOf="@+id/imageView1"
         app:srcCompat="@drawable/img_1" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/imageView3"
         android:layout_width="93dp"
         android:layout_height="84dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal2"
-        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:srcCompat="@drawable/img_1" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="93dp"
-        android:layout_height="84dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal3"
+        app:layout_constraintEnd_toEndOf="@+id/editText3"
         app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal3"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/editText3"
+        app:layout_constraintTop_toTopOf="@+id/imageView1"
         app:srcCompat="@drawable/img_1" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button1"
         android:layout_width="94dp"
         android:layout_height="83dp"
         android:layout_marginTop="24dp"
         android:text="check"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView1"
+        app:layout_constraintStart_toStartOf="@+id/imageView1"
+        app:layout_constraintTop_toBottomOf="@+id/imageView1" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="94dp"
         android:layout_height="83dp"
         android:text="check"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="@+id/button" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/button1" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="94dp"
         android:layout_height="83dp"
         android:text="check"
-        app:layout_constraintEnd_toEndOf="@+id/imageView6"
-        app:layout_constraintStart_toStartOf="@+id/imageView6"
-        app:layout_constraintTop_toTopOf="@+id/button" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/button1" />
 
     <Button
         android:id="@+id/button4"
