--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,6 +121,7 @@
         android:layout_width="93dp"
         android:layout_height="84dp"
         android:layout_marginTop="24dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/editText1"
         app:layout_constraintHorizontal_bias="0.857"
         app:layout_constraintStart_toStartOf="@+id/editText1"
@@ -131,6 +132,7 @@
         android:id="@+id/imageView2"
         android:layout_width="93dp"
         android:layout_height="84dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/editText2"
         app:layout_constraintStart_toStartOf="@+id/editText2"
         app:layout_constraintTop_toTopOf="@+id/imageView1"
@@ -140,6 +142,7 @@
         android:id="@+id/imageView3"
         android:layout_width="93dp"
         android:layout_height="84dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/editText3"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="@+id/editText3"
@@ -153,6 +156,7 @@
         android:layout_marginTop="24dp"
         android:text="check"
         android:textSize="16sp"
+        android:onClick="check_answer"
         app:layout_constraintEnd_toEndOf="@+id/imageView1"
         app:layout_constraintStart_toStartOf="@+id/imageView1"
         app:layout_constraintTop_toBottomOf="@+id/imageView1" />
@@ -162,6 +166,7 @@
         android:layout_width="94dp"
         android:layout_height="83dp"
         android:text="check"
+        android:onClick="check_answer2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/button1" />
@@ -171,6 +176,7 @@
         android:layout_width="94dp"
         android:layout_height="83dp"
         android:text="check"
+        android:onClick="check_answer3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/button1" />
@@ -182,6 +188,7 @@
         android:layout_marginTop="24dp"
         android:text="restart"
         android:textSize="34sp"
+        android:onClick="restart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
