--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,8 +87,11 @@
         android:layout_height="67dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:inputType="numberDecimal"
         android:hint="enter sum"
+        android:inputType="numberDecimal"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/number2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/number2"
@@ -99,8 +102,11 @@
         android:layout_width="100dp"
         android:layout_height="67dp"
         android:ems="10"
-        android:inputType="numberDecimal"
         android:hint="enter sum"
+        android:inputType="numberDecimal"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/number4"
         app:layout_constraintStart_toStartOf="@+id/number4"
         app:layout_constraintTop_toTopOf="@+id/editText1" />
@@ -110,8 +116,11 @@
         android:layout_width="100dp"
         android:layout_height="67dp"
         android:ems="10"
-        android:inputType="numberDecimal"
         android:hint="enter sum"
+        android:inputType="numberDecimal"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/number6"
         app:layout_constraintStart_toStartOf="@+id/number6"
         app:layout_constraintTop_toTopOf="@+id/editText1" />
